<resources>
    <string name="app_name">Nemai</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="dashboard">Dashboard</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>Order</item>
        <item>Address</item>
        <item>Partners</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>About Us</item>

        <item>Privacy Policy</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">LastName</string>


    <string name="prompt_email">Email or Mobile</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_password_again">Retype Password</string>
    <string name="prompt_city">City</string>
    <string name="prompt_gender">Gender :</string>
    <string name="prompt_gender_male">Male</string>
    <string name="prompt_gender_female">Female</string>
    <string name="prompt_email_only">Email</string>
    <string name="prompt_phone_only">Mobile</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_register">Register </string>
    <string name="action_new_password">Change Password </string>
    <string name="action_sign_in_redirect">Register</string>
    <string name="action_forgot_password">Forgot Password?\n<b> Create A New One</b> </string>

    <string name="action_register_redirect">Already a user? Log in here </string>
    <string name="action_sign_in_short">Done</string>
    <string name="error_invalid_email">This email address or Mobile Number is invalid</string>
    <string name="error_invalid_mobile_only">This Mobile Number is invalid</string>
    <string name="error_invalid_password">Password should be minimum 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_password">Please enter the password</string>
    <string name="error_field_required">You forgot to enter Email or Mobile here</string>
    <string name="error_field_required_mobile">You forgot to enter Mobile here</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>

    <!-- Strings relatedto errors -->
    <string name="fnameerror">Enter a valid First name</string>
    <string name="lnameerror">Enter a valid Last name</string>
    <string name="emailerror">Enter a valid Email</string>

    <string name="passwordretypeerror">Passwords didn\'t match</string>
    <string name="passworderror">Password should contain uppercase letters,symbols and numbers \nMin 8 characters</string>
    <string name="nullerror">Did you forget to fill this</string>
    <string name="mobileerror">Enter a valid Mobile</string>
    <string name="title_activity_password">Register</string>

    <string name="facebook_app_id">981447468661996</string>
    <string name="fb_login_protocol_scheme">fb981447468661996</string>

    <string name="server_client_id">881661126317-k3hrrp3skmuji51cm9a3ioqj22p066if.apps.googleusercontent.com</string>
    <string name="sendotp_key">128096AMsirlZWi7ig59c651b6</string>

    <string name="enterphonenumber">Enter your phone number</string>
    <string name="selectcountry">Select country</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>
    <string name="submit_main"><![CDATA[Submit & Search]]></string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="register_text">New User? \n<b> Register Here </b></string>


    <string name="weight_dimension_address">Weight + Dimension+Address</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="apply">APPLY</string>
    <string name="proceed_to_payment">Proceed to payment</string>

    <string name="sign_in">Sign in</string>
    <string name="saved_address">Addresses</string>
    <string name="orderedCouriers">Orders</string>
    <string name="courier_partners">Courier Partners</string>
    <string name="notifications">Notifications</string>
    <string name="enter_number">Enter Number</string>
    <string name="dummy_number">+46123456789</string>
    <string name="enter">Enter</string>
    <string name="resend_via_text">Resend via text ()</string>
    <string name="resend_via_call">Resend via call ()</string>
    <string name="name">Name</string>
    <string name="delivery_time_and_date_n_type_of_service">Delivery Time and date (Type of service)</string>
    <string name="price">Price</string>
    <string name="your_password_reset_link_has_been_sent_n_please_check_your_mailbox">Your Password Reset Link has been sent.  Please Check your Mailbox.</string>
    <string name="log_in">Log in</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="tracking_id">Tracking ID</string>
    <string name="scan">Scan</string>
    <string name="waybill">Waybill</string>
    <string name="reference">Reference</string>

    <string name="dummy_waybill_no">12345678901</string>
    <string name="estimated_ntime">Estimated  time</string>
    <string name="dummy_date_and_time">12:03:2017 12:12:12</string>
    <string name="date_and_time">Date and Time</string>
    <string name="location">Location</string>
    <string name="estimated_delivery">Estimated delivery</string>
    <string name="courier">Courier</string>
    <string name="domestic">Domestic</string>
    <string name="entercity">Enter city</string>
    <string name="international">International</string>
    <string name="source_city">Source City</string>

    <string name="destination_city">Destination City</string>
    <string name="package_details">Package Details</string>
    <string name="document">Document</string>
    <string name="parcel">Parcel</string>


    <string name="enter_pincode">Enter Pincode</string>
    <string name="before_12">Before 12</string>
    <string name="dummy_price">100.00</string>
    <string name="dummy_time">12:54:00</string>

    <string name="dummy_time_2">12:20:00</string>


    <string name="package1">Package1</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">Kg</string>
    <string name="invoice_value">Invoice Value</string>
    <string name="currency_unit">Rs</string>
    <string name="package_dimensions_in_cms">Package Dimensions (In cms)</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="package_description">Package Description</string>
    <string name="dummy_area">Hinjewadi,</string>
    <string name="dummy_city">Pune</string>
    <string name="dummy_pincode">411001,</string>
    <string name="track">Track</string>
    <string name="loading">Loading...</string>
    <string name="data_here">Data here</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="app_icon">App Icon</string>
    <string name="checkmark">CheckMark</string>
    <string name="otp_code">OTP Code</string>
    <string name="reset_password_image">Reset Password Image</string>
    <string name="location_arrow_icon">Location Arrow Icon</string>
    <string name="dtdc">DTDC</string>
    <string name="location_marker">Location Marker</string>
    <string name="dummy_state">Maharashtra</string>
    <string name="verification_in_progress">Verification in progress</string>
    <string name="resend_call">Resend via Call</string>
    <string name="resend_text">Resend via Text</string>
    <string name="resend_call_placeholder">Resend via Call\n ( %d )</string>
    <string name="resend_text_placeholder">Resend via Text ( %d )</string>
    <string name="search_icon">Search Icon</string>
    <string name="hint">Editor #%d</string>
    <string name="courier_count">Courier %1d of %2d</string>
    <string name="no_internet_here">We\'re in the No Internet Zone</string>


    <string name="title_activity_details">DetailsActivity</string>
    <string name="answer">Edit</string>
    <string name="answer_low">edit</string>
    <string name="connect">Deliver here</string>
    <string name="years">years</string>
    <string name="asked">asked</string>
    <string name="profile">"Profile"</string>

    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_background" translatable="false">background</string>
    <string name="transition_list" translatable="false">list</string>

    <string name="details_connect">CONNECT</string>
    <string name="details_close">CLOSE</string>
    <string name="details_details">DETAILS</string>
    <string name="initializing_faker">Initializing Faker...</string>
    <string name="shipment_title">Shipment %1d of %2d</string>
    <string name="selected_count">%1$s selected</string>
    <string name="action_remove">Remove</string>
    <string name="date_picker_title_parcel">Courier Pickup Date</string>
    <string name="date_picker_title_dob">Courier Pickup Date</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_symbol">Rs. %d</string>

</resources>
