<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/orderedCouriers" />
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/saved_address" />

        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/courier_partners" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />


    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

       <item
            android:id="@+id/nav_about_us"
           android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="Privacy Policy" />
    </group>

</menu>
