<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dip"
    tools:context="com.scleroid.nemai.activity.registration.OtpVerificationActivity">
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textWrapper"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/sending_sms"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:hint="@string/enter_number"
        android:text="@string/dummy_number"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/inputContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:labelFor="@id/inputCode"
                android:text="@string/entercode"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputCode"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/otp_code"
                android:inputType="number" />


            <Button
                android:id="@+id/codeInputButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:minHeight="56dp"
                android:onClick="onSubmitClicked"
                android:text="@string/enter"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resend_timer_sms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/resend_via_text"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/resend_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/resend_via_call"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressIndicator"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/progress"
            android:indeterminateDuration="3000"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/checkmarkImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:background="@drawable/checkmark"
            android:contentDescription="@string/checkmark"
            android:visibility="invisible" />
    </RelativeLayout>


    <TextView
        android:id="@+id/progressText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/inprogress"
        android:textAllCaps="true"
        android:textColor="@color/sendotp_light_grey"
        android:textSize="22sp" />

</LinearLayout>

    <!--</RelativeLayout>-->


