<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/dummy_time"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:background="#000000"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/dummy_city"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:background="#000000"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/dummy_time_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>
