<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:background="#ffffff"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:text="@string/delivery_time_and_date_n_type_of_service"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:background="#ffffff"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold" />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/linearExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d7d7d7"
        android:orientation="vertical" />
</LinearLayout>
